# WeatherAppsMonitoring

./: README.md  alert.rules.yml  docker-compose.yml  prometheus.yml  pyproject.toml
