[project]
name = "weatherappsmonitoring"
version = "0.1.0"
description = ""
authors = [
    {name = "donatien konan",email = "donatien.konan.pro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
dependencies = [
    "prometheus-client (>=0.21.1,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
